--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -118,7 +118,7 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>43 Raymouth Rd. Baltemoer, London 3910</p>
+                      <p>43 Raymouth Rd. HSR layout, Bangalore</p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
@@ -131,7 +131,7 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>info@yourdomain.com</p>
+                      <p style="font-size: 12px;">Empirefurniture001@gmail.com</p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
@@ -144,39 +144,38 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>+1 294 3925 3939</p>
+                      <p>+91 9856124578</p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
               </div>
 
-              <form>
-                <div class="row">
-                  <div class="col-6">
-                    <div class="form-group">
-                      <label class="text-black" for="fname">First name</label>
-                      <input type="text" class="form-control" id="fname">
-                    </div>
-                  </div>
-                  <div class="col-6">
-                    <div class="form-group">
-                      <label class="text-black" for="lname">Last name</label>
-                      <input type="text" class="form-control" id="lname">
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="text-black" for="email">Email address</label>
-                  <input type="email" class="form-control" id="email">
-                </div>
-
-                <div class="form-group mb-5">
-                  <label class="text-black" for="message">Message</label>
-                  <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
-                </div>
-
-                <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
-              </form>
+			  <form action="https://formsubmit.co/empirefurniture001@gmail.com" method="post" role="form" onsubmit="return validateform()">
+				<div class="row">
+					<div class="col-6">
+						<div class="form-group">
+							<label class="text-black" for="fname">First name</label>
+							<input type="text" class="form-control" id="fname" name="fname">
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="form-group">
+							<label class="text-black" for="lname">Last name</label>
+							<input type="text" class="form-control" id="lname" name="lname">
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="text-black" for="email">Email address</label>
+					<input type="email" class="form-control" id="email" name="email">
+				</div>
+				<div class="form-group mb-5">
+					<label class="text-black" for="message">Message</label>
+					<textarea name="message" class="form-control" id="message" cols="30" rows="5"></textarea>
+				</div>
+				<button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
+			</form>
+			
 
             </div>
 
