--- a/views/user/services.ejs
+++ b/views/user/services.ejs
@@ -104,7 +104,7 @@
 								<img src="/static/truck.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>Fast &amp; Free Shipping</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+							<p>Enjoy the convenience of free shipping on all orders, making your online shopping experience even more delightful.</p>
 						</div>
 					</div>
 
@@ -114,7 +114,7 @@
 								<img src="/static/bag.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>Easy to Shop</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+							<p>Enjoy a seamless shopping experience with our user-friendly website, making it easy and convenient to find and purchase your desired products.</p>
 						</div>
 					</div>
 
@@ -124,7 +124,7 @@
 								<img src="/static/support.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>24/7 Support</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+							<p>Experience uninterrupted assistance with our 24/7 support, ensuring that help is always available whenever you need it.</p>
 						</div>
 					</div>
 
@@ -134,7 +134,7 @@
 								<img src="/static/return.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>Hassle Free Returns</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+							<p>Enjoy a hassle-free return experience on our website, ensuring your satisfaction is our priority.</p>
 						</div>
 					</div>
 
@@ -144,7 +144,7 @@
 								<img src="/static/truck.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>Fast &amp; Free Shipping</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+							<p>Enjoy the convenience of free shipping on all orders, making your online shopping experience even more delightful.</p>
 						</div>
 					</div>
 
@@ -154,7 +154,7 @@
 								<img src="/static/bag.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>Easy to Shop</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+							<p>Enjoy a seamless shopping experience with our user-friendly website, making it easy and convenient to find and purchase your desired products.</p>
 						</div>
 					</div>
 
@@ -164,7 +164,7 @@
 								<img src="/static/support.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>24/7 Support</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+							<p>Experience uninterrupted assistance with our 24/7 support, ensuring that help is always available whenever you need it.</p>
 						</div>
 					</div>
 
@@ -174,7 +174,7 @@
 								<img src="/static/return.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>Hassle Free Returns</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+							<p>Enjoy a hassle-free return experience on our website, ensuring your satisfaction is our priority.</p>
 						</div>
 					</div>
 
