--- a/views/user/blog.ejs
+++ b/views/user/blog.ejs
@@ -70,24 +70,24 @@
 		<!-- End Header/Navigation -->
 
 		<!-- Start Hero Section -->
-			<div class="hero">
-				<div class="container">
-					<div class="row justify-content-between">
-						<div class="col-lg-5">
-							<div class="intro-excerpt">
-								<h1>Blog</h1>
-								<p class="mb-4">Discover the joy of interior design as you explore our diverse range of furniture, where you'll find the perfect combination of modern trends, all at your fingertips.</p>
-								<p><a href="/shop" class="btn btn-secondary me-2">Shop Now</a></p>
-							</div>
+		<div class="hero">
+			<div class="container overflow-hidden">
+				<div class="row justify-content-between">
+					<div class="col-lg-5">
+						<div class="intro-excerpt">
+							<h1>Modern Interior <span class="d-block">Design Studio</span></h1>
+							<p class="mb-4">Discover the joy of interior design as you explore our diverse range of furniture, where you'll find the perfect combination of modern trends, all at your fingertips.</p>
+							<p><a href="/shop" class="btn btn-secondary me-2">Shop Now</a></p>
 						</div>
-						<div class="col-lg-7">
-							<div class="hero-img-wrap">
-								<img src="/static/couch.png" class="img-fluid">
-							</div>
+					</div>
+					<div class="col-lg-7 col-md-6 col-sm-12 col-12">
+						<div class="hero-img-wrap">
+							<img src="/static/couch.png" class="img-fluid img-small" style="width: 100%;">
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 		<!-- End Hero Section -->
 
 		
