--- a/views/user/userinfo.ejs
+++ b/views/user/userinfo.ejs
@@ -75,8 +75,8 @@
 		</nav>
 
         <div class="hero" style="padding: 10px;">
-            <div class="container">
-                <div class="row justify-content-between align-items-center">
+            <div class="container" >
+                <div class="row justify-content-between align-items-center"style="width: 115%;">
                     <div class="col-lg-5">
                         <div class="intro-excerpt">
                             <h1 class="text-white">User Details</h1>
@@ -84,19 +84,19 @@
                     </div>
                     <div class="col-md-12 col-lg-7 mt-5 mb-4">
                         <div class="d-flex justify-content-end">
-                            <button type="button" onclick="window.location='/myorders'" class="btn btn-primary btn-sm mb-3 me-3">
-                                <img src="/static/order.png" alt="My Orders" class="me-2" style="width: 20px; height: 20px;"> My Orders
+                            <button type="button" onclick="window.location='/myorders'" class="btn btn-primary btn-sm mb-3 me-3" style="font-size: 12px;" >
+                                <img src="/static/order.png" alt="My Orders" class="me-2" style="width: 20px; height: 20px"> My Orders
                             </button>
-                            <button type="button" onclick="window.location='/wishlist'" class="btn btn-primary btn-sm mb-3 me-3">
+                            <button type="button" onclick="window.location='/wishlist'" class="btn btn-primary btn-sm mb-3 me-3" style="font-size: 12px;" >
                                 <img src="/static/wishlist.png" alt="Wishlist" class="me-2" style="width: 20px; height: 20px;"> Wishlist
                             </button>
-                            <button type="button" onclick="window.location='/wallet'" class="btn btn-primary btn-sm mb-3 me-3" style="background-color: #3b5d50;" >
+                            <button type="button" onclick="window.location='/wallet'" class="btn btn-primary btn-sm mb-3 me-3" style="background-color: #3b5d50;font-size: 12px;" >
                                 <img src="/static/wallet.png" alt="Wallet" class="me-2" style="width: 20px; height: 20px;"> Wallet
                                 <div class="p-2 rounded" style="background-color: #3b5d50;">
                                     <% if (wallet && wallet.wallet !== undefined && wallet.wallet !== null) { %>
-                                        <p class="mb-2" style="font-size: 15px; color: white;">Wallet Balance: ₹ <%= wallet.wallet %> </p>
+                                        <p class="mb-2" style="font-size: 12px; color: white;">Balance: ₹ <%= wallet.wallet %> </p>
                                     <% } else { %>
-                                        <p class="mb-2" style="font-size: 15px; color: white;">Wallet data not available</p>
+                                        <p class="mb-2" style="font-size: 12px; color: white;">₹ 0</p>
                                     <% } %>
                                     
                                 </div>
