--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -476,7 +476,7 @@
 
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/tiny-slider.js"></script>
-script src="js/custom.js"></script>
+<script src="js/custom.js"></script>
 <link rel="stylesheet" href="/path/to/owl.carousel.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
