--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -159,12 +159,12 @@
 						
 						
 						<li class="nav-item ">
-							<a class="nav-link" href="/home" style="margin-right: -25px;">Home</a>
+							<a class="nav-link" href="/home">Home</a>
 						</li>
-						<li class="active"><a class="nav-link" href="/shop" style="margin-right: -25px;">Shop</a></li>
-						<li><a class="nav-link" href="/services" style="margin-right: -25px;">Services</a></li>
-						<li><a class="nav-link" href="/blog" style="margin-right: -25px;">Blog</a></li>
-						<li><a class="nav-link" href="/contact" style="margin-right: -25px;">Contact us</a></li>
+						<li class="active"><a class="nav-link" href="/shop" >Shop</a></li>
+						<li><a class="nav-link" href="/services">Services</a></li>
+						<li><a class="nav-link" href="/blog">Blog</a></li>
+						<li><a class="nav-link" href="/contact">Contact us</a></li>
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
@@ -172,7 +172,7 @@
 						<li><a class="nav-link" href="/cart"><img src="/static/cart.svg"></a></li>
 					</ul>
                     <div class="mt-2">
-                        <% if (userId) { %>
+                        <!-- <% if (userId) { %>
 							<form action="/logout" method="post" class="d-grid">
 								<button type="submit" class="btn btn-warning" style="margin-left: 50px;">Logout</button>
 							</form>
@@ -180,7 +180,7 @@
 							<form action="/login" method="post" class="d-grid">
 								<button type="submit" class="btn btn-warning" style="margin-left: 50px;">Login</button>
 							</form>
-						<% } %>
+						<% } %> -->
                     </div>
 				</div>
 			</div>
