--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -168,7 +168,7 @@
 						<li><a class="nav-link" href="userinfo"><img src="/static/user.svg"></a></li>
 						<li><a class="nav-link" href="/cart"><img src="/static/cart.svg"></a></li>
 					</ul>
-                    <% if (userId) { %>
+                    <!-- <% if (userId) { %>
 						<form action="/logout" method="post" class="d-grid">
 							<button type="submit" class="btn btn-warning" style="margin-left: 50px;">Logout</button>
 						</form>
@@ -176,7 +176,7 @@
 						<form action="/login" method="post" class="d-grid">
 							<button type="submit" class="btn btn-warning" style="margin-left: 50px;">Login</button>
 						</form>
-					<% } %>
+					<% } %> -->
 					
                 </div>
 				</div>
